<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk1"
    tools:context=".ui.screens.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="17dp"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/txt_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial_bold"
                android:text="@string/enter_amount"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/star"
                android:textColor="@color/red"
                android:textSize="20sp" />



        </LinearLayout>

        <EditText
            android:id="@+id/edit_txt_donation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/your_amount"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:fontFamily="@font/arial_bold"
            android:maxLength="10"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arial_bold"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/optional"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:textSize="14sp" />




        </LinearLayout>

        <EditText
            android:id="@+id/edtPhNo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/your_mobile_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:fontFamily="@font/arial_bold"
            android:maxLength="12"
            android:paddingStart="12dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RtlSymmetry" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnOne"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/btnTwo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/btnThree"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnFour"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="4"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/btnFive"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/btnSix"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="6"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnSeven"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="7"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/btnEight"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="8"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/btnNine"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="9"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="12dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnClear"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="40sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/arial_bold"/>


                </LinearLayout>

                <TextView
                    android:id="@+id/btnZero"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:fontFamily="@font/arial_bold"
                    android:padding="10dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <LinearLayout
                    android:id="@+id/btnBack"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/text_gray_background"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="40sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cancel"
                        android:contentDescription="@string/todo"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

           <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_xenia"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_sib"/>


            <Button
                android:id="@+id/btn_pay"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:maxLength="7"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>